--- a/signupAndsignin.html
+++ b/signupAndsignin.html
@@ -32,11 +32,16 @@
            margin-bottom: 40px;
            border-radius: 5px;
            font-size: 20px;
-           border:1px solid gray
+           border:1px solid gray;
+           padding-left: 10px;
        }
        h3{
            text-align: center;
            margin-bottom: 60px;
+       }
+       h5,h2{
+           text-align: center;
+           color: green;
        }
     </style>
 
@@ -49,11 +54,36 @@
             <h4>Full Name</h4>
             <input type="text" id="name" placeholder="Enter Name">
             <h4>Mobile No.</h4>
-            <input type="number" id="mob-no" placeholder="Enter Mobile No.">
+            <input type="number" id="mob" placeholder="Enter Mobile No.">
             <h4>Password</h4>
             <input type="text" id="password" placeholder="Enter Password">
             <input type="submit" value="Sign Up">
         </form>
+        <h5></h5>
+        <h2></h2>
     </div>
 </body>
 </html>
+
+
+<script>
+    document.querySelector("form").addEventListener("submit", addData)
+    var arr=JSON.parse(localStorage.getItem("logInData")) || [];
+    function addData(){
+        event.preventDefault();
+        var obj={name:form.name.value,
+        mobile:form.mob.value,
+    password:form.password.value};
+    arr.push(obj);
+    localStorage.setItem("logInData", JSON.stringify(arr));
+    var msg=document.createElement("h5");
+    msg.innerText="Successfully Signed Up!";
+    var LogIn=document.createElement("h2");
+    var anchor=document.createElement("a");
+    anchor.setAttribute("href", "signIn.html")
+    anchor.innerText="Login here"
+    LogIn.innerHTML=anchor;
+    document.querySelector("div").append(msg,LogIn)
+
+    }
+</script>
